# striker-ball

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  web-demo.yaml
assets/: game.yaml  localization.yaml
assets/locales/en-US/: content.ftl  locale.yaml
assets/sprites/: ball.atlas.yaml  targetBlue.atlas.yaml  targetRed.atlas.yaml
assets/sprites/players/: blueSoccerPlayer.atlas.yaml  blueSoccerPlayer2.atlas.yaml  player.animations.yaml  redSoccerPlayer.atlas.yaml  redSoccerPlayer2.atlas.yaml
assets/ui/: numbers.atlas.yaml
assets/ui/team_select/: goBackButton.atlas.yaml
examples/: behaviors.rs  lan.rs  matchmaking.rs
scripts/: build-web.sh
src/: assets.rs  input.rs  lib.rs  main.rs  matchmaking.rs  menu.rs  play.rs  schema.rs  session.rs  ui.rs  utils.rs
src/play/: ball.rs  input.rs  layers.rs  path2d.rs  pin.rs  player.rs  spawn.rs
src/ui/: countdown.rs  fade.rs  howtoplay.rs  match_done.rs  pause.rs  score_display.rs  splash.rs  team_select.rs  winner.rs
src/ui/team_select/: assets.rs  data.rs
src/utils/: egui.rs  follow.rs  input.rs  lifetime.rs  path2d.rs  state.rs
wasm_resources/: index.html
