[package]
name = "striker_ball"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
bones_framework = { git="https://github.com/fishfolk/bones.git" }
bones_bevy_renderer = { git="https://github.com/fishfolk/bones.git" }
bytemuck = "1.16.1"
gilrs = "0.11.0"
ttf-parser = { version = "0.25.1", features = ["std"] }
ttf-parser-older = { package = "ttf-parser", version = "0.24.1", features = ["std"] }
bitfield = "0.19.1"
bit_field = "0.10.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# We don't directly depend on these but we need to add the WASM features to them because
# other dependencies user them.
getrandom = { version = "0.3.3", features = ["wasm_js"] }
uuid = { version = "1.17", features = ["rng-getrandom"]}

[profile.release]
lto = true
codegen-units = 8
strip = true

[profile.dev]
codegen-units = 512
opt-level     = 1
debug = false

[profile.dev.package."*"]
codegen-units = 1
debug         = 1 # Only keep line numbers
opt-level     = 3